<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.schoolgest3.Activities.MainActivity">
    <item
        android:id="@+id/action_school"
        android:icon="@drawable/ic_action_school"
        android:title="@string/school"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_add_school"
                android:title="@string/action_add_school"
                />
            <item
                android:id="@+id/action_list_school"
                android:title="@string/action_list_school"
                />
        </menu>
    </item>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"
        android:title="@string/add">
    </item>
</menu>